<resources>
    <string name="app_name">EcoTrip - Izin Pendakian</string>
    <string name="welcome_to_ecotrip">Selamat Datang di EcoTrip Hiking</string>
    <string name="wisata_katalog">Katalog Gunung Indonesia</string>
    <string name="pesan_sekarang">Pesan Tiket</string>
    <string name="form_booking">Pendaftaran Pendakian (Simaksi)</string>
    <string name="nama_pemesan">Nama Ketua Rombongan</string>
    <string name="nik_paspor">NIK / No. Identitas</string>
    <string name="tanggal_booking">Tanggal Mendaki</string>
    <string name="jumlah_tiket">Jumlah Personel</string>
    <string name="pilih_pintu_masuk">Pilih Basecamp / Jalur</string>
    <string name="kategori_wisatawan">Kategori Pendaki</string>
    <string name="domestik">Domestik</string>
    <string name="mancanegara">Mancanegara</string>
    <string name="fasilitas_tambahan">Layanan Tambahan Pendakian</string>
    <string name="sewa_jeep">Sewa Jeep Basecamp (+600.000)</string>
    <string name="camping">Sewa Area Camping (+50.000)</string>
    <string name="jasa_porter">Jasa Porter Berlisensi (+250.000)</string>
    <string name="hitung_total">Cek Estimasi Biaya</string>
    <string name="booking_sekarang">Daftar Pendakian Sekarang</string>
    <string name="total_bayar">Total Biaya: </string>
    <string name="riwayat_booking">Transaksi Izin Mendaki</string>
    <string name="edit_jadwal">Ubah Jadwal</string>
    <string name="batalkan_booking">Batalkan Izin</string>
    <string name="bayar_izin">Bayar Izin</string>
    <string name="konfirmasi_hapus">Apakah Anda yakin ingin membatalkan pendaftaran ini?</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_transaksi">Transaksi</string>
    <string name="menu_profile">Profil</string>
    <string name="destinasi_terpopuler">Gunung Terfavorit</string>
    <string name="tagline_splash">SISTEM INFORMASI PENDAKIAN GUNUNG</string>
    <string name="cari_destinasi_pendaki">Cari Destinasi atau Pendaki...</string>
    <string name="cari_gunung_jalur">Cari Gunung atau Jalur...</string>
    <string name="point_pendaki">Point Pendaki</string>
    <string name="point_desc">Dapatkan diskon dengan merawat ekosistem di area pendakian</string>
    <string name="promo_mendaki">Promo Meriah Mendaki Lebih Hemat</string>
    <string name="destinasi_populer">Destinasi Pendakian Populer</string>
    <string name="lihat_semua">Lihat Semua</string>
</resources>
